--- a/css/style.css
+++ b/css/style.css
@@ -387,7 +387,7 @@ i.fas.fa-long-arrow-alt-right {
 /************Footer newsletter Section ***********/
 
 .ftr-bg{
-    background-image: url('../images/btm-img.png');
+    background-image: url('../images/footer-img.png');
     background-color: black;
     background-repeat: no-repeat;
     background-size: 100%;
